# convexhull

./: .buildconfig  Readme.md  meson.build  org.gwutz.Jarvis.json
lib/: meson.build  sal-point.c  sal-point.h
src/: jarvis-application-window.c  jarvis-application-window.h  jarvis-application.c  jarvis-application.h  jarvis-resources.xml  jarvis.c  jarvis.h  main.c  meson.build  util.c  util.h  window.ui
test/: meson.build  random-points-test.c  sal-point-test.c
